lustre/lod/lod_qos.c
@@ -1435,6 +1435,7 @@ int lod_qos_prep_create(const struct lu_env *env, struct lod_object *lo,
 					lu_object_put(env, &stripe[i]->do_lu);
 
 			OBD_FREE(stripe, sizeof(stripe[0]) * stripe_len);
+			lo->ldo_stripenr = 0;
 		} else {
 			lo->ldo_stripe = stripe;
 			lo->ldo_stripes_allocated = stripe_len;
